build(vsix): add VSIX packaging and optimize extension bundle
- Add VSIX packaging via @vscode/vsce and `npm run package:vsix`
- Introduce `.vscodeignore` to exclude sources/tooling and include built assets
- Exclude `.sourcegraph/` from packaged extension and add to VCS ignore
- Rename Amp → NebulaFlow across extension, webview, and docs; update assets and labels; bump to 0.1.0
- Minor UI tweaks (icon sizes, labels) and stability improvements (key props, deps)

--- a/workflow/Web/workflow.html
+++ b/workflow/Web/workflow.html
@@ -7,7 +7,7 @@
             http-equiv="Content-Security-Policy"
             content="default-src 'none'; img-src {cspSource} https: data:; script-src {cspSource}; style-src {cspSource}; font-src data: {cspSource};"
         />
-        <title>Amp Workflow Editor</title>
+        <title>NebulaFlow Workflow Editor</title>
     </head>
     <body>
         <div id="root"></div>
