--- a/workflow/Web/workflow.html
+++ b/workflow/Web/workflow.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
             http-equiv="Content-Security-Policy"
-            content="default-src 'none'; img-src {cspSource} https: data:; script-src {cspSource}; style-src {cspSource}; font-src data: {cspSource};"
+            content="default-src 'none'; img-src {cspSource} https: data:; script-src {cspSource}; style-src {cspSource}; font-src data: {cspSource}; connect-src {cspSource};"
         />
         <title>NebulaFlow Workflow Editor</title>
     </head>
